Fix CSS alignment for tabs and comments

--- a/Comments/index.scss
+++ b/Comments/index.scss
@@ -2,6 +2,10 @@
 
 .mrc-comments {
 
+  .mrc-panel-item {
+    padding: 0 10px 10px 0;
+  }
+
   textarea {
     width: 100%;
     display: flex;
